# tflite

./: .gitignore  README.md
docker/: Dockerfile  build-docker.sh  setup-android-sdk.sh  setup-ubuntu.sh
sandbox/builder/: Makefile
sandbox/float-ops/: Makefile  float-ops.py
sandbox/float-ops/average_pool_2d/: average_pool_2d.py
sandbox/float-ops/avg_pool/: avg_pool.py
sandbox/float-ops/concat/: concat.py
sandbox/float-ops/conv2d/: conv2d.py
sandbox/float-ops/depthwise_conv2d/: depthwise_conv2d.py
sandbox/float-ops/fully_connected/: fully_connected.py
sandbox/float-ops/fullyconnected/: fullyconnected.py
sandbox/float-ops/l2_normalize/: l2_normalize.py
sandbox/float-ops/max_pool/: max_pool.py
sandbox/float-ops/relu/: relu.py
sandbox/float-ops/relu6/: relu6.py
sandbox/float-ops/resize_bilinear/: resize_bilinear.py
sandbox/float-ops/sigmoid/: sigmoid.py
sandbox/float-ops/softmax/: softmax.py
sandbox/float-ops/tanh/: tanh.py
sandbox/libtoco/: .gitignore  Makefile  README.md  libtoco_test.cc  toco_model_test.cc
sandbox/libtoco/caffe/: README.md
sandbox/libtoco/caffe/caffe2lite/: .gitignore  CMakeLists.txt  Makefile  README.md  caffe2lite.cpp  genlite.cpp  modelbuilder.cpp
sandbox/libtoco/caffe/caffe2lite/include/tensorflow/contrib/lite/schema/: schema.fbs  schema_generated.h
sandbox/libtoco/caffe/lenetcpp/: CMakeLists.txt  lenetcpp.cpp  lenetdump.cpp  lenetinf.cpp
sandbox/libtoco/caffe/lenetcpp/caffe2lite/: CMakeLists.txt  genlite.cpp
sandbox/mnist/: Makefile  mnist_deep.py  mnist_deep_sin.py  mnist_softmax.py
sandbox/mnist/deep/: mnist_deep.py  mnist_deep_nodropout.py
sandbox/mnist/deep_custom/: mnist_deep.py
sandbox/mnist/deep_dummy/: mnist_deep.py
sandbox/mnist/deep_lrn/: mnist_deep_lrn.py
sandbox/mnist/deep_lrn_dummy/: mnist_deep_lrn.py
sandbox/mnist/fc/: mnist_softmax.py
sandbox/mnist/fc_fake/: mnist_softmax.py
sandbox/mnist/fc_sin/: mnist_softmax.py
sandbox/mnist/lstm/: mnist_lstm.py  recurrent_network.py  recurrent_network_orig.py
sandbox/mnist/tools/: drop_dropouts.py  rename_ops.py  save_summaries.py
sandbox/models/: .gitignore  Makefile
sandbox/models/mobilenet_1.0/: mobilenet-cats.py  mobilenet_1.0.py
sandbox/ops/float-ops/: Makefile
sandbox/ops/float-ops/atrous_conv2d/: atrous_conv2d.py
sandbox/ops/float-ops/conv2d_transpose/: conv2d_transpose.py
sandbox/ops/float-ops/depth_to_space/: depth_to_space.py
sandbox/ops/float-ops/floor/: floor.py
sandbox/ops/float-ops/fully_connected/: fully_connected.py
sandbox/ops/float-ops/l2_pool/: l2_pool.py
sandbox/ops/float-ops/leaky_relu/: leaky_relu.py
sandbox/ops/float-ops/local_response_normalization/: local_response_normalization.py
sandbox/ops/float-ops/max_pool/: max_pool.py
sandbox/ops/float-ops/max_pool_3x3_s2/: max_pool_3x3_s2.py
sandbox/ops/float-ops/mean/: mean.py
sandbox/ops/float-ops/multiply/: multiply.py
sandbox/ops/float-ops/pad/: pad.py
sandbox/ops/float-ops/pad_avg_pool/: pad_avg_pool.py
sandbox/ops/float-ops/pad_conv2d/: pad_conv2d.py
sandbox/ops/float-ops/pad_max_pool/: pad_max_pool.py
sandbox/ops/float-ops/sigmoid/: sigmoid.py
sandbox/ops/float-ops/slice/: slice.py
sandbox/ops/float-ops/space_to_depth/: space_to_depth.py
sandbox/ops/float-ops/tanh/: tanh.py
sandbox/ops/quant-ops/: Makefile
sandbox/ops/quant-ops/quantize/: quantize.py
sandbox/ops/quant-ops/quantize_v2/: quantize_v2.py
sandbox/ops/rnn-ops/: Makefile
sandbox/ops/rnn-ops/basic_lstm_cell/: basic_lstm_cell.py
sandbox/ops/rnn-ops/basic_rnn_cell/: basic_rnn_cell.py
sandbox/ops/uint8-ops/: Makefile  uint8-ops.py
sandbox/ops/uint8-ops/add/: add.py
sandbox/ops/uint8-ops/atrous_conv2d/: atrous_conv2d.py
sandbox/ops/uint8-ops/avg_pool/: avg_pool.py
sandbox/ops/uint8-ops/conv2d_transpose/: conv2d_transpose.py
sandbox/ops/uint8-ops/depth_to_space/: depth_to_space.py
sandbox/ops/uint8-ops/fully_connected/: fully_connected.py
sandbox/ops/uint8-ops/leaky_relu/: leaky_relu.py
sandbox/ops/uint8-ops/max_pool/: max_pool.py
sandbox/ops/uint8-ops/mean/: mean.py
sandbox/ops/uint8-ops/pad/: pad.py
sandbox/ops/uint8-ops/slice/: slice.py
sandbox/ops/uint8-ops/softmax/: softmax.py
sandbox/quant-ops/: Makefile
sandbox/quant-ops/dequantize/: dequantize.py
sandbox/quantor/: .gitignore  Makefile  compare_toco.py  eval_frozen.py  eval_frozen_imagenet.py  eval_slim_debugger.py  eval_tflite.py  eval_tflite_imagenet.py  prepare.py  quantize_frozen.py  quantor_frozen.py  quantor_frozen_imagenet.py  visualize_output.py  visualize_qt4.py
sandbox/quantor-train/: .gitignore  Makefile  eval_frozen.py  eval_tflite.py  export_inference_graph.py  prepare.py  train_image_classifier_quantize.py
sandbox/quantor/mks/: cifarnet.mk  inception_resnet_v2.mk  inception_v3.mk  inceptionv3.mk  mobilenetv1.mk  resnet_v1_50.mk
sandbox/quantor/post-quantor/: .gitignore  Makefile  eval_slim_debugger.py  visualize_qt4.py
sandbox/quantor/post-quantor/dispflownet-tf/: .gitignore  Makefile  direct_quantize_frozen.py  dispnet.py  eval_frozen.py  export.py  test_flyingthings.py  train.py  util.py
sandbox/quantor/post-quantor/fcn/: .gitignore  FCN.py  Makefile  TensorflowUtils.py  eval_FCN.py  (+4 more)
sandbox/quantor/post-quantor/fcn-pascal/: .gitignore  Makefile
sandbox/quantor/pre-quantor/: .gitignore  Makefile  eval_image_classifier_quantize.py  export_inference_graph.py  train_image_classifier_quantize.py
sandbox/quantor/tfquantor/: .gitignore  Makefile  README.md  setup.py
sandbox/quickdraw/: .gitignore  Makefile
sandbox/quickdraw/tutorial/: run_tfrecord.py  train_model.py
sandbox/rnn-ops/: Makefile
sandbox/rnn-ops/basic_lstm_cell/: basic_lstm_cell.py
sandbox/rnn-ops/gru_cell/: gru_cell.py
sandbox/uint8-ops/: Makefile
sandbox/uint8-ops/concat/: concat.py
sandbox/uint8-ops/conv2d/: conv2d.py
sandbox/uint8-ops/depthwise_conv2d/: depthwise_conv2d.py
sandbox/uint8-ops/multiply/: multiply.py
sandbox/uint8-ops/resize_bilinear/: resize_bilinear.py
sandbox/uint8-ops/space_to_depth/: space_to_depth.py
scripts/: run-docker.sh
(+150 files in other folders)
